--- a/public_html/HighScores.html
+++ b/public_html/HighScores.html
@@ -6,14 +6,21 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Play Snake Online</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/Style.css">
+        <style>
+    body{
+        background-color: darkblue;
+    }
+</style>
     </head>
     <body>
-        <canvas id="game-screen"></canvas>
-        
-        <script src="JS/Snake.js"></script>
+       
+    <h2>Name 000000</h2>  
+    <h2>Name 000000</h2>
+    <h2>Name 000000</h2>
+    <h2>Name 000000</h2>
     </body>
 </html>
