--- a/public_html/TEST.html
+++ b/public_html/TEST.html
@@ -16,9 +16,9 @@ h1 { font-size:50px; text-align: center; margin: 0; padding-bottom: 25px;}
 <script type="text/javascript">
 function play_game() 
 {
-var level = 160; // Game level, by decreasing will speed up
-var rect_w = 45; // Width 
-var rect_h = 30; // Height
+var level = 35 // Game level, by decreasing will speed up
+var rect_w = 80; // Width 
+var rect_h = 50; // Height
 var inc_score = 50; // Score
 var snake_color = "#2EFEF7"; // Snake Color
 var ctx; // Canvas attributes
@@ -26,7 +26,7 @@ var tn = []; // temp directions storage
 var x_dir = [-1, 0, 1, 0]; // position adjusments
 var y_dir = [0, -1, 0, 1]; // position adjusments
 var queue = []; 
-var frog = 10; // defalut food
+var frog = 1; // defalut food
 var map = [];
 var MR = Math.random; 
 var X = 5 + (MR() * (rect_w - 10))|0; // Calculate positions
@@ -46,27 +46,14 @@ ctx = c.getContext('2d');
 
 
 // Map positions
-for (i = 1; i < rect_w; i++)
+for (i = 0; i < rect_w; i++)
 {
 map[i] = [];
 }
 
 
 
-// random placement of snake food
-function rand_frog() 
-{
-var x, y;
-do 
-{
-x = MR() * rect_w|0;
-y = MR() * rect_h|0;
-} 
-while (map[x][y]);
-map[x][y] = 1;
-ctx.fillStyle = snake_color;
-ctx.strokeRect(x * 10+1, y * 10+1, 8, 8);
-}
+
 
 
 
@@ -108,7 +95,7 @@ X+= x_dir[direction];
 Y+= y_dir[direction];
 if (frog < queue.length) 
 {
-dir = queue.pop()
+dir = queue.pop();
 map[dir[0]][dir[1]] = 0;
 ctx.clearRect(dir[0] * 10, dir[1] * 10, 10, 10);
 }
@@ -155,7 +142,7 @@ sum+= code
 <h1>Play Snake</h1>
 <p>by Andy West</p>
 <div id="msg"></div>
-<canvas id="playArea" width="450" height="300">Sorry your browser does not support HTML5</canvas>
+<canvas id="playArea" width="800" height="500>Sorry your browser does not support HTML5</canvas>
 </body>
 <audio controls autoplay hidden>
         <source src="Super Hexagon- FULL Soundtrack.mp3" type="audio/mpeg">
