--- a/public_html/TEST.html
+++ b/public_html/TEST.html
@@ -10,13 +10,13 @@
 <title>Play Snake</title>
 <style type="text/css">
 body {text-align:center;}
-canvas { border:5px dotted #ccc; }
+canvas { border:5px outset gold; }
 h1 { font-size:50px; text-align: center; margin: 0; padding-bottom: 25px;}
 </style>
 <script type="text/javascript">
 function play_game() 
 {
-var level = 35 // Game level, by decreasing will speed up
+var level = 100; // Game level, by decreasing will speed up
 var rect_w = 80; // Width 
 var rect_h = 50; // Height
 var inc_score = 50; // Score
@@ -53,7 +53,20 @@ map[i] = [];
 
 
 
-
+// random placement of snake food
+function rand_frog() 
+{
+var x, y;
+do 
+{
+x = MR() * rect_w|0;
+y = MR() * rect_h|0;
+} 
+while (map[x][y]);
+map[x][y] = 1;
+ctx.fillStyle = snake_color;
+ctx.strokeRect(x * 10+1, y * 10+1, 8, 8);
+}
 
 
 
@@ -95,7 +108,7 @@ X+= x_dir[direction];
 Y+= y_dir[direction];
 if (frog < queue.length) 
 {
-dir = queue.pop();
+dir = queue.pop()
 map[dir[0]][dir[1]] = 0;
 ctx.clearRect(dir[0] * 10, dir[1] * 10, 10, 10);
 }
@@ -142,7 +155,7 @@ sum+= code
 <h1>Play Snake</h1>
 <p>by Andy West</p>
 <div id="msg"></div>
-<canvas id="playArea" width="800" height="500>Sorry your browser does not support HTML5</canvas>
+<canvas id="playArea" width="800" height="500">Sorry your browser does not support HTML5</canvas>
 </body>
 <audio controls autoplay hidden>
         <source src="Super Hexagon- FULL Soundtrack.mp3" type="audio/mpeg">
