--- a/public_html/HighScores.html
+++ b/public_html/HighScores.html
@@ -11,16 +11,17 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/Style.css">
         <style>
-    body{
-        background-color: darkblue;
-    }
-</style>
+            body{
+                background-color: darkblue;
+            }
+        </style>
     </head>
     <body>
-       
-    <h2>Name 000000</h2>  
-    <h2>Name 000000</h2>
-    <h2>Name 000000</h2>
-    <h2>Name 00000</h2>
+        <font color="red">   
+        <h1>Name 000000</h1>  
+        <h1>Name 000000</h1>
+        <h1>Name 000000</h1>
+        <h1>Name 000000</h1>
+        <font>
     </body>
 </html>
